force-app/main/default/objects/API_Log__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Record</label>
    <referenceTo>Account</referenceTo>
    <referenceTo>Case</referenceTo>
    <referenceTo>Contact</referenceTo>
    <referenceTo>Lead</referenceTo>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>